<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ginia.gbencivengo.tsa_daily_form.FormHome">

    <TextView
        android:id="@+id/FormsWelcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="141dp"
        android:layout_marginTop="16dp"
        android:text="@string/FormsWelcomeText"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="141dp" />

    <TextView
        android:id="@+id/FormsBodyText"
        android:layout_width="321dp"
        android:layout_height="47dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/FormsBodyText"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FormsWelcomeText"
        android:layout_marginStart="32dp" />

    <TextView
        android:id="@+id/ViewPrevCompletedFormsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="56dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="290dp"
        android:text="@string/ViewPrevCompletedForms"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FormsWelcomeText" />

    <Spinner
        android:id="@+id/FormsDropDown"
        android:layout_width="349dp"
        android:layout_height="18dp"
        android:layout_marginLeft="39dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FormsBodyText" />

    <Button
        android:id="@+id/SubmitFormSelectionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="148dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="18dp"
        android:text="@string/SubmitButtonText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FormsDropDown" />

</android.support.constraint.ConstraintLayout>
